Fine tune plugin-template

--- a/plugin-template/composer.json
+++ b/plugin-template/composer.json
@@ -7,5 +7,10 @@
         "psr-0": {
             "MyVendor": "src"
         }
-    }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "sh scripts/install"
+        ]
+    }                                                            
 }
