first attempt at an install script

--- a/plugin-template/settings.cfg
+++ b/plugin-template/settings.cfg
@@ -1,3 +1,8 @@
-VENDOR_NAME="MyVendorName"
-PROJECT_NAME="MyPluginName"
+VENDOR_NAME="MyVendor"
 
+PROJECT_TITLE="My Plugin"
+PROJECT_NAME="MyPlugin"
+PROJECT_CONST="MY_PLUGIN"
+
+PLUGIN_NAME="my-plugin"
+FUNCTION_NAME="myPlugin"
